unpackaged/main/default/objects/Renewal_Price_Line__c/Renewal_Price_Line__c.object-meta.xml
<CustomObject>
    <label>Renewal Price Line</label>
    <nameField>
        <label>Renewal Price Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Renewal Price Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>