unpackaged/main/default/objects/Renewal_Price_Line__c/fields/Animal_Or_Ingrediants__c.field-meta.xml
<CustomField>
    <fullName>Animal_Or_Ingrediants__c</fullName>
    <label>Animal Or Ingrediants</label>
    <length>255</length>
    <type>Text</type>
</CustomField>