unpackaged/main/default/objects/Renewal_Price_Line__c/fields/Number_Of_Animals__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Animals__c</fullName>
    <label>Number Of Animals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>