unpackaged/main/default/objects/Renewal_Price_Line__c/fields/Price_Ex_VAT__c.field-meta.xml
<CustomField>
    <fullName>Price_Ex_VAT__c</fullName>
    <label>Price Ex VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>