unpackaged/main/default/objects/Renewal_Price_Line__c/fields/Production__c.field-meta.xml
<CustomField>
    <fullName>Production__c</fullName>
    <label>Production</label>
    <length>255</length>
    <type>Text</type>
</CustomField>