unpackaged/main/default/objects/Renewal_Price_Line__c/fields/Renewal_Price_Report__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Price_Report__c</fullName>
    <label>Renewal Price Report</label>
    <referenceTo>Renewal_Price_Report__c</referenceTo>
    <relationshipLabel>Renewal Price Lines</relationshipLabel>
    <relationshipName>Renewal_Price_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>