unpackaged/main/default/objects/Renewal_Price_Line__c/fields/Total_Inc_VAT__c.field-meta.xml
<CustomField>
    <fullName>Total_Inc_VAT__c</fullName>
    <label>Total Inc VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>