unpackaged/main/default/objects/Renewal_Price_Line__c/fields/UnitId__c.field-meta.xml
<CustomField>
    <fullName>UnitId__c</fullName>
    <label>UnitId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>